--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5767,3 +5767,16 @@ button.close {
     display: none !important; } }
 
 /*# sourceMappingURL=app.css.map */
+
+.registrationPage {
+  height: 100vh;
+}
+
+.registration {
+  height: 300px;
+  margin-top: 30px;
+}
+
+.register {
+  margin-top: 8px;
+}
