--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5768,15 +5768,8 @@ button.close {
 
 /*# sourceMappingURL=app.css.map */
 
-.registrationPage {
-  height: 100vh;
-}
 
-.registration {
-  height: 300px;
-  margin-top: 30px;
-}
-
-.register {
-  margin-top: 8px;
+.aboutLink {
+  display: inline-block;
+  text-align: center;
 }
