--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5769,7 +5769,12 @@ button.close {
 /*# sourceMappingURL=app.css.map */
 
 
-.aboutLink {
-  display: inline-block;
-  text-align: center;
+.links > a {
+    color: #636b6f;
+    padding: 0 25px;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
 }
