--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5770,4 +5770,7 @@ button.close {
   width: 80%;
   margin: 10px auto; }
 
+.completed {
+  text-decoration: strikethrough; }
+
 /*# sourceMappingURL=app.css.map */
