take advantage of two way v model binding for checkbox status update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5771,6 +5771,6 @@ button.close {
   margin: 10px auto; }
 
 .completed {
-  text-decoration: strikethrough; }
+  text-decoration: line-through; }
 
 /*# sourceMappingURL=app.css.map */
