--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,3 +16,18 @@
 .completed {
   text-decoration: line-through;
 }
+
+.small-container {
+  width: 20%;
+  margin: auto;
+}
+
+#links { 
+  li {
+    a {
+      &:hover {
+        background-color: peru;
+      }
+    }
+  }
+}
